resources/css/style.css
h1, h2, h3 {
  font-family: Helvetica;
  text-align: center;
  }

h1 {
  font-size: 70px;
  color: white;
}

h2 {
  font-size: 32px;
}

h3 {font-size: 23px;
}

.header {
  background-image: url("file:///Users/deborah/Documents/broadway/resources/images/flatiron.png");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.header ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.header li a {
    display: block;
    padding: 8px 16px;
    text-align:center;
    color: white;
    font-family: Helvetica;
    font-size: 18px;
}

li a:hover {
    color: black;
}

.center {
  text-align: center;
  font-size: 14px;
  font-family: Helvetica;
}

.footer {
  background-color: dimgray;
  color: white;
  font-size: 11px;
  font-family: Helvetica;
}

.footer ul {
    list-style: none;
    text-align: left;
    margin: 0;
    padding: 0;
  }
.footer li {
    font-family: Helvetica;
    font-size: 16px;
}

.footer a {
    padding: 2px 10px;
    color: white;
    display: inline;

}

